--- a/index.html
+++ b/index.html
@@ -3,29 +3,16 @@
 	<head>
 		<link rel ="stylesheet" href="style.css">
 
-		<title> Access Form </title>
+		<title> HCI WEBSITE FINALS </title>
 		
-			<h1>Sign Up</h1>
+			<h1>Motorcycle Garage</h1>
 
 	</head>
 		<body>
 			<div class="container1" align ="center">
-				<input type="text" class="name" placeholder="First Name"></input>
-				<input type="text" class="name" placeholder="Last Name"></input>
-				<input type="text" class="name" placeholder="Middle Name"></input>
-				<br>
-				<input type="text" class="address" placeholder="Email Address"></input>
-				<input type="text" class="pword" placeholder="Password"></input>
-				<br>
-				<label>Date of Birth:</label>
-				<br>
-				<input type="date" name="Date of Birth"></input>
-				<br>
-				<label>Gender:</label>
-				<input type="radio" class="gender" value="male">Male</input>
-				<input type="radio" class="gender" value="female">Female</input>
-				<br>
-				<input type="button" class="last" value="Confirm" =""></input>
+				<input type="button" class="name" value="Sports"></input>
+				<input type="button" class="name" value="Touring"></input>
+				<input type="button" class="name" value="Off Road"></input>
 		</div>
 	</body>
 </html>
