--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 	<head>
 		<link rel ="stylesheet" href="style.css">
 
-		<title> HCI WEBSITE FINALS </title>
+		<title> PAGE 1</title>
 		
 			<h1>Motorcycle Garage</h1>
-
+				
 	</head>
 		<body>
 			<div class="container1" align ="center">
-				<input type="button" class="name" value="Sports"></input>
-				<input type="button" class="name" value="Touring"></input>
-				<input type="button" class="name" value="Off Road"></input>
-		</div>
+				<a href="page2.html">
+					<input type="button" class="name" value="Sports"></input>
+				</a>
+				<a href="page3.html">
+					<input type="button" class="name" value="Touring"></input>
+				</a>
+				<a href="page4.html">
+					<input type="button" class="name" value="Off road"></input>
+				</a>
+			</div>
 	</body>
 </html>
