Improve overall content

--- a/garage.html
+++ b/garage.html
@@ -3,20 +3,20 @@
 	<head>
 		<link rel ="stylesheet" href="style.css">
 
-		<title> PAGE 1</title>
+		<title> GARAGE </title>
 		
 			<h1>Motorcycle Garage</h1>
 				
 	</head>
 		<body>
-			<div class="container1" align ="center">
-				<a href="page2.html">
+			<div class="container1">
+				<a href="sport.html">
 					<input type="button" class="name" value="Sports"></input>
 				</a>
-				<a href="page3.html">
+				<a href="touring.html">
 					<input type="button" class="name" value="Touring"></input>
 				</a>
-				<a href="page4.html">
+				<a href="offroad.html">
 					<input type="button" class="name" value="Off road"></input>
 				</a>
 			</div>
