--- a/LOGIN.html
+++ b/LOGIN.html
@@ -6,6 +6,7 @@
     </head>
         <body>
           <div class="container1" align ="center">
+                    <img src = "logo.jpg" class="logo">
                     <h1> Log In </h1>
                     <form>
                         <p>Email Address</p>
@@ -14,7 +15,7 @@
                             <input class="text-field" type="password" name="" placeholder="">
                           <br>
                           
-                          <a href="garage.html">
+                          <a href="SUCCESS.html">
                               <input type="button" class="sign" value="Log in"></input>    
                           </a> 
                       </form>
