Final Content and Design

--- a/LOGIN.html
+++ b/LOGIN.html
@@ -15,7 +15,7 @@
                             <input class="text-field" type="password" name="" placeholder="">
                           <br>
                           
-                          <a href="SUCCESS.html">
+                          <a href="Main.html">
                               <input type="button" class="sign" value="Log in"></input>    
                           </a> 
                       </form>
