--- a/Main.html
+++ b/Main.html
@@ -14,9 +14,9 @@
 				</div>
 				<div>
 				<ul class="nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="women.html">About</a></li>
-					<li><a href="out.html">Log out</a></li>
+					<li><a href="Main.html">Home</a></li>
+					<li><a href="About.html">About</a></li>
+					<li><a href="LOGIN.html">Log out</a></li>
 				</ul>
 			</div>
 		</div>
@@ -29,17 +29,18 @@
 			<h3 class="subtitle">Home</h3>
 			<div class="row" align="center"> 
 		  		<div class="column">
+		  			<h5> Sport Bikes </h5> 
+				<a href="slideshow.html">
+					<img src="bs1.png" style = "width:200px; height:200px;">
+				</a> 
 		  			<h5> Off Road Bikes </h5>
-				<a href="OF.html">
+				<a href="slideshow1.html">
 					<img src="or1.png" style = "width:200px; height:200px;">
 				</a>
-					<h5> Sport Bikes </h5> 
-				<a href="SP.html">
-					<img src="sp1.png" style = "width:200px; height:200px;">
-				</a> 
+					
 					<h5> Touring Bikes </h5>
-				<a href="TB.html">
-					<img src="tb2.png" style = "width:200px; height:200px;">
+				<a href="slideshow2.html">
+					<img src="tb1.png" style = "width:200px; height:200px;">
 				</a>	
 
 			</div>	
