--- a/SIGNUP.html
+++ b/SIGNUP.html
@@ -25,7 +25,7 @@
         <input type="radio" class="gender" value="male">Male</input>
         <input type="radio" class="gender" value="female">Female</input>
         <br>
-        <a href="LOGIN.html">
+        <a href="SUCCESS.html">
             <input type="button" class="last" value="Confirm" =""></input>
         </a>
     </div>
