--- a/Main.html
+++ b/Main.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title> Website </title>
@@ -27,8 +28,7 @@
 		</div>
 		<div class="main-body">
 			<h3 class="subtitle">Home</h3>
-			<div class="row" align="center"> 
-		  		<div class="column">
+			<div class="column" > 
 		  			<h5> Sport Bikes </h5> 
 				<a href="slideshow.html">
 					<img src="bs1.png" style = "width:200px; height:200px;">
@@ -44,7 +44,6 @@
 				</a>	
 
 			</div>	
-		
 			</div>
 		</div>
 			<div class="footer">Copyright @ 2018 Developed by Liam Letada</div>
