--- a/SUCCESS.html
+++ b/SUCCESS.html
@@ -10,7 +10,7 @@
 				<div class = "welcome">
 					<p>Congratulations! You have successfully created your account.</p>
 				</div>
-					<p><a href ="LOGIN.html">Continue</a></p>
+					<p><a href ="Main.html">Continue</a></p>
 			</div>
 		</body>
 </html>
