--- a/slideshow.html
+++ b/slideshow.html
@@ -2,8 +2,9 @@
     <!DOCTYPE html>
     <html>
       <head>
-        <title> Slide Show Sport bikes</title>
         <link rel ="stylesheet" href="slideshow.css">
+        <title> Slide Show Sport bikes</title>
+            <h1> Sport Bikes </h1>
       </head>
       <body>
            <!-- Container for the image gallery -->
@@ -17,7 +18,7 @@
 
         <div class="mySlides">
           <div class="numbertext">2 / 6</div>
-            <img src="bs2" style="width:50%">
+            <img src="bs2.png" style="width:50%">
         </div>
 
         <div class="mySlides">
