--- a/slideshow1.html
+++ b/slideshow1.html
@@ -2,8 +2,9 @@
     <!DOCTYPE html>
     <html>
       <head>
+         <link rel ="stylesheet" href="slideshow1.css">
         <title> Slide Show offroad bikes</title>
-        <link rel ="stylesheet" href="slideshow1.css">
+            <h1> Off Road Bikes </h1>
       </head>
       <body>
          <!-- Container for the image gallery -->
