--- a/slideshow2.html
+++ b/slideshow2.html
@@ -1,12 +1,13 @@
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
     <html>
       <head>
-        <title> Slide Show offroad bikes</title>
         <link rel ="stylesheet" href="slideshow2.css">
+        <title> Slide Show offroad bikes</title>
+             <h1> Touring Bikes </h1>
       </head>
       <body>
          <!-- Container for the image gallery -->
+
       <div class="container">
 
         <!-- Full-width images with number text -->
