--- a/LOGIN.html
+++ b/LOGIN.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Log-In</title>
-        <link rel = "stylesheet" type="text/css" href = "LOGIN.css">
-    </head>
-        <body>
-          <div class="container1" align ="center">
-                    <img src = "logo.jpg" class="logo">
-                    <h1> Log In </h1>
-                    <form>
-                        <p>Email Address</p>
-                            <input class="text-field" type="text" name="" placeholder="">
-                        <p>Password</p>
-                            <input class="text-field" type="password" name="" placeholder="">
-                          <br>
-                          
-                          <a href="Main.html">
-                              <input type="button" class="sign" value="Log in"></input>    
-                          </a> 
-                      </form>
-            </div>
-        </body>
-</html>
+<link rel ="stylesheet" href="LOGIN.css">
+<!-- Button to open the modal -->
+<button onclick="document.getElementById('id01').style.display='block'">Sign In</button>
+
+<!-- The Modal (contains the Sign Up form) -->
+<div id="id01" class="modal">
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
+  <form class="modal-content" action="/action_page.php">
+    <div class="container">
+      <h1>Sign In</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label>
+
+      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+      <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="submit" class="signup" formaction="Main.html">Sign In</button>
+      <script src="LOGIN.js"></script>
+      </div>
+    </div>
+  </form>
+</div>
