Added css to about

--- a/About.html
+++ b/About.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-		<title>About</title>
-		<b>About</b>
+</html>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title> Website </title>
+		
+		<link rel="stylesheet" href="About.css">
+	
+	<body>
+	<div class="header">
+		<div class="header-container">
+			<img src="logo.jpg" style = "width:100px; height:100px;"> 
+				<h1 class="title"></h1>
+				</div>
+				<div>
+				<ul class="nav">
+					<li><a href="Main.html">Home</a></li>
+					<li><a href="About.html">About</a></li>
+					<li><a href="LOGIN.html">Log out</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="caption">
+		<h2> About </h2>
 		<p> Are you currently searching for basic knowledge about motorcycles? It is likely that you would like to know more about it because you are planning to purchase your own. Before you would decide to hop on the motorcycle and just ride away, there are some basic things that you have to learn about first.  This website is created to help motorcycle enthusiats to know the basic Knowledge about different kinds of motorcycle before buying. </p>
 
-		<b>Know What Bike Options are Available</b>
+		<h2> Know What Bike Options are Available </h2>
 		
 		<p>Are you aware that there are different motorcycle types that are available? You may not realize it but when you look at things closely, you will see that motorcycles each have a different look to them and the controls may not exactly be the same. Knowing what the bike options are can be very beneficial for you so try your best to know what the options are.
 
 		You may also want to consider if you are going to buy a brand new or used motorcycle. There are some second hand motorcycles that are in good condition that will allow you to make use of it for a long period of time even if you did not pay a lot of money for it.</p>
 	</head>
+			<div class="footer">Copyright @ 2018 Developed by Liam Letada</div>
+	</body>
 </html>
